Fix T40271: Missing redraw for bone editing bone roll

We should have a new notifier for this